--- a/requirements.txt
+++ b/requirements.txt
@@ -116,6 +116,7 @@ python-dotenv==1.0.1
 python-nvd3==0.16.0
 python-slugify==8.0.4
 pytz==2025.1
+pyqlib==0.9.6
 pyyaml==6.0.2
 referencing==0.36.2
 requests==2.32.3
